--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Cocktail Explorer</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="icon" href="/cocktail.ico" type="image/x-icon">
+  <script type="module" src="/src/main.jsx"></script>
 </head>
 <body>
   <div id="root"></div>
